fixed jump up/jump down in CSS for responsive design

--- a/unit1_projects/class1/completed/stylesheets/styles.css
+++ b/unit1_projects/class1/completed/stylesheets/styles.css
@@ -345,7 +345,11 @@ footer:after {
     margin-bottom: 0px;
   }
 
-  .jump {
+  .jump.up {
+    display: none;
+  }
+
+  .jump.down {
     display: none;
   }
 
